<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/from_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin_size"
        android:layout_marginTop="@dimen/large_margin_size"
        android:text="@string/foreign_exchange_from_text"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/from_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin_size"
        android:layout_marginTop="@dimen/medium_margin_size"
        android:drawablePadding="@dimen/medium_margin_size"
        android:text="@string/foreign_exchange_default_from_currency_text"
        app:drawableEndCompat="@drawable/ic_arrow_drop_down"
        app:drawableStartCompat="@drawable/ic_flag_us"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from_title_text_view" />

    <TextView
        android:id="@+id/to_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin_size"
        android:layout_marginTop="@dimen/large_margin_size"
        android:text="@string/foreign_exchange_to_text"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="@+id/guide_line"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/to_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin_size"
        android:layout_marginTop="@dimen/medium_margin_size"
        android:drawablePadding="@dimen/medium_margin_size"
        android:text="@string/foreign_exchange_default_to_currency_text"
        app:drawableEndCompat="@drawable/ic_arrow_drop_down"
        app:drawableStartCompat="@drawable/ic_flag_gb"
        app:layout_constraintStart_toStartOf="@+id/guide_line"
        app:layout_constraintTop_toBottomOf="@+id/to_title_text_view" />

    <TextView
        android:id="@+id/amount_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin_size"
        android:layout_marginTop="@dimen/large_margin_size"
        android:text="@string/foreign_exchange_amount_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from_text_view" />

    <EditText
        android:id="@+id/amount_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin_size"
        android:layout_marginEnd="@dimen/large_margin_size"
        android:text="@string/foreign_exchange_default_amount_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/guide_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_title_text_view" />

    <TextView
        android:id="@+id/converted_amount_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin_size"
        android:layout_marginTop="@dimen/large_margin_size"
        android:text="@string/foreign_exchange_converted_amount_text"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/guide_line"
        app:layout_constraintTop_toBottomOf="@+id/to_text_view" />

    <EditText
        android:id="@+id/converted_amount_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin_size"
        android:layout_marginEnd="@dimen/large_margin_size"
        android:text="@string/foreign_exchange_default_amount_text"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guide_line"
        app:layout_constraintTop_toBottomOf="@+id/converted_amount_title_text_view" />

    <Button
        android:id="@+id/convert_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin_size"
        android:layout_marginTop="@dimen/large_margin_size"
        android:layout_marginEnd="@dimen/large_margin_size"
        android:background="@color/teal_200"
        android:text="@string/foreign_exchange_button_text"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/amount_edit_text" />
</androidx.constraintlayout.widget.ConstraintLayout>
